@@ -18,6 +18,8 @@ Release:    v2014012411
 	> If a PP submission has been attempted 5 times and errors each time it will be removed from the queue.
 	> Multiple attempts are handled properly - except text content where previous attempts can not be viewed.
 	> Incorrect grade calculation (Null grades from previous submissions no longer included) fixed in PP.
+	> DV Window resizable.
+	> Print original submission from DV Window.
 
 ####################################################################################
 
